refactor(model) : 코드수정..